Replace use of `String.format(…)` with formatted Strings.
Original pull request: #2752
Closes #2751